--- a/contact.css
+++ b/contact.css
@@ -12,155 +12,134 @@ body{
     display:flex;
 }
 header{
-color:white;
-background-color:rgb(7, 7, 99);
-font-size: 35px;
-text-align: center;
-padding:10px;
-width:min-content;
-font-family:Copperplate Gothic;
-font-weight:bold;
-transform:translate(20);
-transition:all 1s;
+    color:white;
+    background-color:rgb(23, 74, 124);
+    font-size: 35px;
+    text-align: center;
+    padding:10px;
+    width:min-content;
+    font-family:Copperplate Gothic;
+    font-weight:bold;
+    transform:translate(20);
+    transition:all 1s;
 }
 img{
-background-color:white;
-border:4px solid rgb(7, 7, 99);
-width: 200px;
-height: 250px;
-margin-right:0px;
-border-radius: 30px;
-transform:rotate(360deg);
-transition:all 1s;
+    background-color:white;
+    border:4px solid rgb(23, 74, 124);
+    width: 200px;
+    height: 250px;
+    margin-right:0px;
+    border-radius: 30px;
+    transform:rotate(360deg);
+    transition:all 1s;
 }
 .founder{
-font-weight: 400;
-font-size: 20px;
-display: flex;
-padding: 10px;
-margin: 10px;
-align-items:center;
+    font-weight: 400;
+    font-size: 20px;
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    align-items:center;
 }
 .founder li{
     padding:15px;
-}
-.hl{
-    border:1px solid navy;
-    max-width:100%;
-    align-items: center;
-}
-
-p{
-font-family:Copperplate Gothic;
-font-weight:400;
-padding:10px;
-margin:10px;
-}
-a{
-font-family:High Tower;
-font-weight:400;
-font-size: 20px;
-border-radius:30px;
-padding:10px;
-margin:10px;
-transform:rotate(360deg);
-transition:rotate 1s;
-}
-a:hover{
-    transform:scale(0.9);
-    opacity: 0.8;
+    list-style:none;
 }
 .share{
-    padding: 10px;
-    margin: 10px;
-    max-width:100%;
-    transition:all 1s;
+    width:80%;
+    max-width:600px;
+    min-width:300px;
+    margin:20px auto;
     transform:translate(10);
 }
-.share p{
-    font-weight: 900;
-    font-size:20px;
+h2{
+    text-align: center;
+}
+.jss33{
+    color:rgb(23, 74,124);
+    display: inline-flex;
+    padding: 0 5px;
+    font-size:1rem;
+    transform: translate(25px,50%);
+    font-weight: 600;
+    background-color:aliceblue;
+}
+.jss31 {
+    color: #212121;
+    border: 4px solid rgb(23, 74, 124);
+    transition: border 0.2s ease-in-out;
+    font-weight: 500;
+}
+.form-input, .form-message {
+    border-radius: 20px;
+    box-sizing: border-box;
+    margin-bottom: 1.3rem;
+    outline: none;
+    padding: 0.7rem;
+    resize: none;
+    width: 100%;
+}
+.form-input {
+    height: 50px;
+}
+.jss32 {
+    border: 4px solid rgb(23, 74, 124);
+    transition: border 0.2s ease-in-out;
+    font-weight: 500;
+}
+.form-message {
+    height: 150px;
 }
 button{
-padding: 10px;
-margin:10px;
-border-radius: 50px;
-font-size:18px;
-background: aliceblue;
-border: 3px solid rgb(7, 7, 99);
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-font-weight: 800;
-animation:shake 2s ease-in-out infinite alternate-reverse both;
-
-}
-@keyframes shake{
-    0%{transform:rotate(00deg);}
-    25%{transform:rotate(-20deg);}
-   50%{transform: rotate(00deg);}
-   75%{transform:rotate(20deg);}
-   100%{transform:rotate(00deg);}
-
+    width:100px;
+    height:40px;
+    border-radius:30px;
+    border:none;
+    color:aliceblue;
+    background-color:rgb(23, 74, 124);
+    font-size:1.2rem;
 }
 .flex_container{
-    padding:10px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
+    padding:15px;
+    margin:10px;
+    width:50px;
+    background-color: rgb(23, 74, 124);
+    border-radius:20px;
+}
+.flex_container ul {
+    width:100%;
+    display:flex;
     flex-wrap: wrap;
-}
-.fa{
-    padding: 20px;
-    font-size: 30px;
-    display:inline-block;
-    text-decoration: none;
-}
-.fa-facebook{
-    background: #3B5998;
-    color: white;
-    height:30px;
-    width:30px;
-}
-.fa-instagram{
-    background:#f09433;
-    background:-moz-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    background:-webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888',GradientType=1);
-    color:white;
-    height:30px;
-    width:30px;
-    
-}
-.fa-linkedin{
-    background:#0072b1;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0072b1', endColorstr='#0072b1',GradientType=1);
-    color: white;
-    height:30px;
-    width:30px;
-}
-.fa-youtube{
-    background:#c4302b;
-    color: white;
-    height:30px;
-    width:30px;
-}
-.fa-telegram{
-    background:#0088cc;
-    color: white;
-    height:30px;
-    width:30px;
-}
+    justify-content: center;
+    list-style:none;
+  }
+  .flex_container ul li i{
+    font-size:3rem;
+    color:aliceblue;
+    margin:30px 0px;
+    transition:all 0.3s ease-in-out;
+  }
+  .flex_container ul li i:hover{
+    transform:translateY(-10px);
+  }
 @media (max-width:769px){
     body{
         display:block;
     }
     .flex_container{
-        flex-direction: row;
+        width:100%;
+        padding:0px;
+        margin:0px;
+        border-radius:50px 0px;
     }
-    .fa-facebook,.fa-instagram,.fa-linkedin,.fa-telegram,.fa-youtube{
-        margin:auto;
+    .flex_container ul{
+        display: flex;
+        flex-direction:row;
+        justify-content: space-evenly;
     }
-
+    .flex_container ul li i{
+        margin:10px 0px;
+    }
     header{
         width:100%;
         padding:0px;
@@ -177,18 +156,12 @@ animation:shake 2s ease-in-out infinite alternate-reverse both;
         box-shadow:5px 5px 5px gray;
     }
     li{
-        padding-bottom:10px;
+        padding-top:10px ;
         transition:all 1s;
         transform:translate(20);
-    }
-    .hl{
-        opacity:0;
     }
     .share{
         max-width:100%;
         align-items:center;
     }
-    .share p{
-        font-size:1.2rem;
-    }   
 }
