--- a/compilers.css
+++ b/compilers.css
@@ -8,18 +8,11 @@ header{
     background-color:rgb(23, 74, 124);
     margin:0px;
     color: white;
-    align-items: center;
-    font-weight: 900;
-    padding-top:10px;
-    padding-bottom:15px;
-    }
-header p{
-    text-decoration: none;
+    font-weight:700;
+    padding:10px 0px;
     font-size:2rem;
-    font-family: bignoodletitling;
-    color: white;
-    letter-spacing: 5px;
-    margin:0px;
+    text-align: center;
+    letter-spacing:5px;
 }
 h3{
     background-color:rgb(23, 74, 124);
@@ -38,22 +31,57 @@ h4{
     margin-right:0px;
 }
 .facts {
-    display: block;
-    align-items: center;
-    text-align: center;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
 }
 .facts img{
-    height:100px;
+    height:9vh;
     width:100px;
-    border-radius:60px;
-    border:4px solid cadetblue;
+    border-radius:15px;
     padding: 10px;
-    margin: 10px;
-    box-shadow: 2px 3px 2px 0px grey;
+    margin:10px;
+    float:left;
+    background-color: aliceblue;
 }
-.links{
-    display:flex;
-    justify-content: center;
+.comp{
+    background-color:rgb(23, 74, 124);
+    width:25rem;
+    height:14.5vh;
+    margin:10px;
+    border-radius:20px;
+    text-decoration: none;
+    overflow:hidden;
+}
+span{
+    opacity: 0;
+    font-weight:bold;
+    background-color:aliceblue;
+    padding:3px;
+    color:rgb(23, 74, 124);
+    position:fixed;
+    right:10px;
+    bottom:5px;
+    border-radius:5px;
+}
+.comp:hover span{
+    opacity:1;
+    font-size:0.9rem;
+}
+.comp:hover{
+    font-size:0.9rem;
+}
+.comp h4{
+    color:aliceblue;
+    padding:10px 5px;
+    margin:0px;
+    font-weight:normal;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+#white{
+    text-align:center;
+    font-size:3rem;
+    color:white;
 }
 p{
     font-weight: 600;
@@ -61,7 +89,12 @@ p{
     text-shadow: 2px grey;
     margin:0px 0px 0px 10px;
 }
-.links a{
+/* .links{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+} */
+/* .links a{
     color:aliceblue;
     text-decoration: none;
     text-align: center;
@@ -74,7 +107,7 @@ p{
 }
 .links a:hover{
     transform:scale(0.9);
-}
+} */
 .bottom{
     background-color: rgb(23, 74, 124);
     color: aliceblue;
@@ -222,5 +255,11 @@ p{
     }
     .bottom p{
         font-size:1.2rem;
+    }
+    header{
+        font-size:1.8rem;
+    }
+    .comp h4{
+        font-size:0.85em;
     }
 }
