--- a/editors.css
+++ b/editors.css
@@ -59,22 +59,22 @@ h4{
 .images .img img{
     width: 100px;
     height: 100px;
-    border-radius:60px;
-    border:4px solid cadetblue;
+    border-radius:20px;
     padding: 8px;
-    margin:10px;
-    box-shadow: 2px 3px 2px 0px grey;
+    margin-bottom:10px;
+    box-shadow: 2px 2px 2px 3px rgb(193, 191, 191);
+}
+.images .img p{
+    margin: auto;
 }
 .images{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content:center;
 }
 .img{
-    display:block;
-    margin:30px;
-    height:120px;
-    width:100px;
-    text-align: center;
+    margin:30px auto;
+    text-align:center;
 }
 .links{
     display:flex;
@@ -92,7 +92,7 @@ h4{
     border-radius: 10px;
 }
 .links a:hover{
-    transform:scale(0.9);
+    scale: 0.9;
 }
 p{
     font-weight: 600;
@@ -132,7 +132,6 @@ p{
     z-index: 999;
     cursor: pointer;
 }
-        
 .fab-icon-holder {
     width: 50px;
     height: 50px;
@@ -140,11 +139,9 @@ p{
     background:rgb(161, 201, 234);
     box-shadow: 0 5px 20px rgba(0,0,0,0.2);
 }
-        
 .fab-icon-holder:hover{
     opacity: 0.8;
 }
-        
 .fab-icon-holder i {
     display:flex;
     align-items: center;
@@ -175,14 +172,14 @@ p{
     right:0px;
     display: flex;
     flex-direction:column;
-    bottom:70px;
+    bottom:0px;
     background:rgb(161, 201, 234);
-    border-radius:25px;
+    border-radius:25px 25px 0px 25px;
     padding:10px;
     opacity: 0;
     transition: all 0.3s ease;
     transform: scale(0);
-    transform-origin:85% bottom;
+    transform-origin:90% bottom;
 }       
 .fab:hover + .fab-options ,.fab-options:hover{
     opacity: 1;
@@ -190,7 +187,7 @@ p{
 }
 .fab-options li {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: 5px;
 }
 .fab-icon-holder:hover{
@@ -241,14 +238,18 @@ p{
     }
     .images .img{
         display:flex;
-        align-items:center;
+        margin-left:10px;
     }
     .images{
         display:block;
     }
     img{
-        padding:10px;
-        margin:10px;
+        padding:0px;
+        margin:0px;
+    }
+    .images .img p{
+        text-align:left;
+        margin:auto 15px;
     }
 .bottom p{
         font-size:0.9rem;
