--- a/compilers.css
+++ b/compilers.css
@@ -15,20 +15,20 @@ header{
     letter-spacing:5px;
 }
 h3{
-    background-color:rgb(23, 74, 124);
-    border-radius:20px;
     width: fit-content;
     padding: 10px;
+    margin:10px;
+    border-radius:15px;
+    background-color:rgb(23, 74, 124);
     color: white;
-    margin-right:0px;
 }
 h4{
-    background-color:rgb(23, 74, 124);
-    border-radius:20px;
     width: fit-content;
-    padding: 10px;
+    background-color:rgb(23, 74, 124);
     color: white;
-    margin-right:0px;
+    border-radius:15px;
+    padding: 10px;
+    margin:10px;
 }
 .facts {
     display:flex;
@@ -36,7 +36,7 @@ h4{
     justify-content:center;
 }
 .facts img{
-    height:9vh;
+    height:65%;
     width:100px;
     border-radius:15px;
     padding: 10px;
@@ -91,30 +91,13 @@ p{
     text-shadow: 2px grey;
     margin:0px 0px 0px 10px;
 }
-/* .links{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
-} */
-/* .links a{
-    color:aliceblue;
-    text-decoration: none;
-    text-align: center;
-    text-transform: capitalize;
-    background-color:rgb(23, 74, 124);
-    padding: 10px;
-    margin: 20px;
-    font-weight: bolder;
-    border-radius: 10px;
-}
-.links a:hover{
-    transform:scale(0.9);
-} */
 .bottom{
     background-color: rgb(23, 74, 124);
     color: aliceblue;
     text-decoration: none;
-    text-align: center;
+    text-align:center;
+    align-items: center;
+    margin:0;
 }
 .bottom p{
     background:rgb(23, 74, 124);
@@ -122,15 +105,15 @@ p{
     font-weight: bold;
     text-decoration: none;
     box-shadow:0 0 0 0;
-    text-align: center;
+}
+.bottom h6{
+    margin:0;
 }
 .bottom img{
     width: 100px;
     height: 100px;
     margin:5px;
     border-radius: 50%;
-    box-shadow: 0 0 0 0;
-    background-color: rgb(23, 74, 124);
 }
 .fab-container {
     position: fixed;
