--- a/editors.css
+++ b/editors.css
@@ -23,7 +23,7 @@ header{
 }
 h3{
     background-color:rgb(23, 74, 124);
-    border-radius:20px;
+    border-radius:15px;
     width: fit-content;
     padding: 10px;
     margin:10px;
@@ -31,9 +31,10 @@ h3{
 }
 h4{
     background-color:rgb(23, 74, 124);
-    border-radius:20px;
+    border-radius:15px;
     width: fit-content;
     padding: 10px;
+    margin:10px;
     color: white;
 }
 .images .img img{
