--- a/index(practise).css
+++ b/index(practise).css
@@ -67,6 +67,7 @@ header{
     background:rgb(161, 201, 234);
     border-radius:20px 0px 0px 20px;
     padding:10px;
+    box-shadow:0px 10px 10px 3px rgba(0,0,0,0.5);
     transition: all 0.3s ease-in-out;
     transform: scale(0);
     transform-origin:120% top;
@@ -290,7 +291,7 @@ button:hover{
         align-items: center;
     }
     .fab-options{
-        right:-40px;
+        right:-15px;
     }
     .logo p{
         font-size:1.5rem;
