--- a/editors.css
+++ b/editors.css
@@ -2,19 +2,27 @@
     padding:0;
     margin:0;
 }
+:root{
+    --background-color:aliceblue;
+    --navbar-background-color:rgb(23, 74, 124);
+    --fab-icon-background-color:rgb(170, 79, 79);
+    --fab-options-background-color:rgb(161, 201, 234);
+    --default-text-color: white;
+    --text-color:black;
+}
 body{
-    background:aliceblue;
-    margin:0;
-    padding:0;
+    background:var(--background-color);
+    color:var(--default-text-color);
+    /* margin:0;
+    padding:0; */
     text-align:center;
 }
 header{
     height:auto;
     z-index:12;
-    background-color:rgb(23, 74, 124);
+    background-color: var(--navbar-background-color);
     padding: 10px;
     padding-right: 0px;
-    color: white;
     font-weight: 900;
     max-width: 100%;
     font-size:2rem;
@@ -22,20 +30,18 @@ header{
     letter-spacing: 5px;
 }
 h3{
-    background-color:rgb(23, 74, 124);
+    background-color:var(--navbar-background-color);
     border-radius:15px;
     width: fit-content;
     padding: 10px;
     margin:10px;
-    color: white;
 }
 h4{
-    background-color:rgb(23, 74, 124);
+    background-color:var(--navbar-background-color);
     border-radius:15px;
     width: fit-content;
     padding: 10px;
     margin:10px;
-    color: white;
 }
 .images .img img{
     width: 100px;
@@ -64,11 +70,11 @@ h4{
     justify-content:center;
 }
 .links a{
-    color:aliceblue;
+    color: var(--default-text-color);
     text-decoration: none;
     text-align: center;
     text-transform: capitalize;
-    background-color:rgb(23, 74, 124);
+    background-color: var(--navbar-background-color);
     padding: 10px;
     margin: 20px;
     font-weight: bolder;
@@ -85,16 +91,13 @@ p{
     text-align: center;
 }
 .bottom{
-    background-color: rgb(23, 74, 124);
-    color: aliceblue;
+    background-color: var(--navbar-background-color);
     text-decoration: none;
     text-align:center;
     align-items: center;
     margin:0;
 }
 .bottom p{
-    background:rgb(23, 74, 124);
-    color:white;
     font-weight: bold;
     text-decoration: none;
     box-shadow:0 0 0 0;
@@ -119,7 +122,7 @@ p{
     width: 50px;
     height: 50px;
     border-radius:15px;
-    background:rgb(161, 201, 234);
+    background: var(--fab-options-background-color);
     box-shadow: 0 5px 20px rgba(0,0,0,0.2);
 }
 .fab-icon-holder:hover{
@@ -132,22 +135,21 @@ p{
     flex-direction: column;
     height: 100%;
     font-size:1.1rem;
-    color: #ffffff;
 }
 .fab {
     width:60px;
     height: 60px;
-    background:rgb(170, 79, 79);
+    background: var(--fab-icon-background-color);
 }
 .fab-label a{
-    color:black;
+    color: var(--text-color);
     font-size:18px;
 }
 .fab-label a:hover{
     text-decoration: none;
 }
 .fab-label a:visited{
-    color:black;
+    color: var(--text-color);
 }
 .fab-options {
     list-style-type: none;
@@ -156,7 +158,7 @@ p{
     display: flex;
     flex-direction:column;
     bottom:-10px;
-    background:rgb(161, 201, 234);
+    background:var(--fab-options-background-color);
     border-radius:25px 25px 0px 25px;
     padding:10px;
     opacity: 0;
@@ -190,8 +192,8 @@ p{
     align-items: center;
     width:fit-content;
     height: max-content;
-    color:black;
     margin: 10px;
+    /* color:black; */
 }
 .fab-icon-holder a{
     text-decoration:none;
