--- a/contact.css
+++ b/contact.css
@@ -1,10 +1,14 @@
 *{
     margin:0px;
     padding:0px;
-    font-family:bree serif;
+}
+:root{
+    --background-color:aliceblue;
+    --navbar-background-color:rgb(23, 74, 124);
+    --default-text-color: white;
 }
 body{
-    background-color:aliceblue;
+    background-color: var(--background-color);
     border-radius:10px;
     padding:0px;
     margin: 0px;
@@ -12,20 +16,19 @@ body{
     display:flex;
 }
 header{
-    color:white;
-    background-color:rgb(23, 74, 124);
+    background-color:var(--navbar-background-color);
+    color:var(--default-text-color);
     font-size: 35px;
     text-align: center;
     padding:10px;
     width:min-content;
-    font-family:Copperplate Gothic;
     font-weight:bold;
     transform:translate(20);
     transition:all 1s;
 }
 img{
-    background-color:white;
-    border:4px solid rgb(23, 74, 124);
+    /* background-color: var(--default-text-color); */
+    border:4px solid var(--navbar-background-color);
     width: 200px;
     height: 250px;
     margin-right:0px;
@@ -56,19 +59,19 @@ h2{
     text-align: center;
 }
 .jss33{
-    color:rgb(23, 74,124);
+    background-color:var(--background-color);
+    color:var(--navbar-background-color);
+    border-radius:5px;
     display: inline-flex;
     padding: 0 5px;
     font-size:1rem;
     transform: translate(25px,50%);
     font-weight: 600;
-    background-color:aliceblue;
 }
 .jss31 {
     color: #212121;
-    border: 4px solid rgb(23, 74, 124);
+    border: 4px solid var(--navbar-background-color);
     transition: border 0.2s ease-in-out;
-    font-weight: 500;
 }
 .form-input, .form-message {
     border-radius: 20px;
@@ -83,7 +86,7 @@ h2{
     height: 50px;
 }
 .jss32 {
-    border: 4px solid rgb(23, 74, 124);
+    border: 4px solid var(--navbar-background-color);
     transition: border 0.2s ease-in-out;
     font-weight: 500;
 }
@@ -95,19 +98,19 @@ button{
     height:40px;
     border-radius:30px;
     border:none;
-    color:aliceblue;
-    background-color:rgb(23, 74, 124);
+    color:var(--default-text-color);
+    background-color:var(--navbar-background-color);
     font-size:1.2rem;
 }
 button:hover{
-    background-color:green;
+    /* background-color:green; */
     transform: scale(1.2);
 }
 .flex_container{
     padding:15px;
     margin:10px;
     width:50px;
-    background-color: rgb(23, 74, 124);
+    background-color: var(--navbar-background-color);
     border-radius:20px;
 }
 .flex_container ul {
@@ -119,7 +122,7 @@ button:hover{
   }
   .flex_container ul li i{
     font-size:3rem;
-    color:aliceblue;
+    color:var(--default-text-color);
     margin:30px 0px;
     transition:all 0.3s ease-in-out;
   }
@@ -134,7 +137,7 @@ button:hover{
         width:100%;
         padding:0px;
         margin:0px;
-        border-radius:50px 0px;
+        border-radius:30px 30px 0px 0px;
     }
     .flex_container ul{
         display: flex;
